@@ -1,3 +1,10 @@
+2003-09-29	Mike Bourgeous		<nitrogen@slimetech.com>
+
+	* More cleanup work on tl880cursor.c.
+	* Added more cJanus info to myhd_154.txt.
+	* Added OSD memory list consolidation function.
+	* Added some TL880 memory info to tl880doc.txt.
+
 2003-09-23	Mike Bourgeous		<nitrogen@slimetech.com>
 
 	* Added more OSD info to tl880doc.txt.
